--- a/main.css
+++ b/main.css
@@ -1,15 +1,20 @@
-html, body {
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100vh;
 }
 
 #container {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
+    width: 440px;
+    height: auto;
 }
 
-#grid {
-    display: flex;
-    min-height: 120px;
-    min-width: 120px;
+#container > #grid {
+    height: 25px;
+    width: 25px;
     border: 0.5px solid black;
 }
