added a prompt when button clicked asking grid style for user

--- a/main.css
+++ b/main.css
@@ -6,10 +6,6 @@ body {
     margin: 0;
 }
 
-.center-div {
-
-}
-
 #container {
     display: flex;
     justify-content: center;
@@ -20,7 +16,7 @@ body {
     margin: 0;
 }
 
-#container > #grid {
+#container #grid {
     height: 40px;
     width: 40px;
     border: 1px solid rgb(0, 0, 0);
@@ -32,8 +28,5 @@ body {
     justify-content: center;
     padding-bottom: 1em;
     margin-bottom: 15px;
-    width: 700px;
-    height: 100px;
     
-
 }
