--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ body {
     align-items: center;
     flex-wrap: wrap;
     width: 700px;
-    height: auto;
+    height: 672px;
     margin: 0;
 }
 
